разметил хеддер и промоблок

--- a/source/index.html
+++ b/source/index.html
@@ -1,12 +1,55 @@
 <!DOCTYPE html>
-<html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Кэт энерджи</title>
-  </head>
-  <body>
+<html class="page" lang="ru">
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Кэт энерджи</title>
+</head>
+<body class="page__body">
+<header class="page-header">
+  <a class="page-header__logo">
+    <img src="img/logo-mobile.svg" width="34" height="38" alt="Логотип «Cat Energy»">
+  </a>
+  <a class="page-header__logo-text">
+    <img src="img/logo-text.svg" width="101" height="18" alt="Cat Energy">
+  </a>
+  <button class="page-header__menu-toggle" type="button">
+    <span class="visually-hidden">Открыть меню</span>
+  </button>
+  <nav class="main-nav">
+    <div class="main-nav__wrapper">
+      <ul class="main-nav__list">
+        <li class="main-nav__item main-nav__item--active">
+          <a>
+            Главная
+          </a>
+        </li>
+        <li class="main-nav__item">
+          <a href="#">
+            Каталог продукции
+          </a>
+        </li>
+        <li class="main-nav__item">
+          <a href="#">
+            Подбор программы
+          </a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+</header>
+<main class="page-main">
+  <h1 class="visually-hidden">Функциональное питание для котов «Cat energy»</h1>
+  <section class="promo">
+    <div class="promo-wrapper">
+      <h2 class="visually-hidden">Промо-блок</h2>
+      <p class="promo__title">Функциональное питание для котов</p>
+      <p class="promo__slogan">Занялся собой? Займись котом!</p>
+      <img src="img/index-can-mobile.png">
+<!--      TODO добавить кнопку или ссылку "подобрать программу", узнать из ТЗ-->
+    </div>
+  </section>
+</main>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">HTML и CSS, уровень 2</a>».</p>
 
-  </body>
+</body>
 </html>
