--- a/source/index.html
+++ b/source/index.html
@@ -44,12 +44,100 @@
       <h2 class="visually-hidden">Промо-блок</h2>
       <p class="promo__title">Функциональное питание для котов</p>
       <p class="promo__slogan">Занялся собой? Займись котом!</p>
-      <img src="img/index-can-mobile.png">
-<!--      TODO добавить кнопку или ссылку "подобрать программу", узнать из ТЗ-->
+      <img src="img/index-can-mobile.png" alt="Стаканчик с едой для кошек">
+      <a class="promo__button button" href="#">Подобрать программу</a>
+    </div>
+  </section>
+  <section class="benefits">
+    <div class="benefits__wrapper">
+      <h2 class="visually-hidden">Цели питания</h2>
+      <ul class="benefits__list">
+        <li class="benefits__item benefits__item--slim">
+          <h3 class="benefits__title">Похудение</h3>
+          <p class="benefits__description">Ваш кот весит больше собаки и почти утратил способность
+            лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+          <a class="benefits__link" href="#">Каталог slim</a>
+        </li>
+        <li class="benefits__item benefits__item--pro">
+          <h3 class="benefits__title">Набор массы</h3>
+          <p class="benefits__description">Заработать авторитет среди дворовых котов и даже собак? Серия
+            Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
+          <a class="benefits__link" href="#">Каталог pro</a>
+        </li>
+      </ul>
+    </div>
+  </section>
+  <section class="special">
+    <div class="special__wrapper">
+      <h2 class="special__title">Как это работает</h2>
+      <ul class="special__list">
+        <li class="special__item special__item--nutrients">
+          <p class="special__text">Функциональное питание содержит только полезные питательные вещества.</p>
+        </li>
+        <li class="special__item special__item--water">
+          <p class="special__text">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
+        </li>
+        <li class="special__item special__item--meal">
+          <p class="special__text">Замените один-два приема обычной еды на наше функциональное питание.</p>
+        </li>
+        <li class="special__item special__item--weight">
+          <p class="special__text">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
+        </li>
+      </ul>
+    </div>
+  </section>
+  <section class="example">
+    <div class="example__wrapper">
+      <h2 class="example__title">Живой пример</h2>
+      <p class="example__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм
+        на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих
+        привычек и по-прежнему спит по 16 часов в день.</p>
+      <div class="example__result">
+        <div class="example__block">
+          <h3 class="example__headline">5 кг</h3>
+          <p class="example__caption">снижение веса</p>
+        </div>
+        <div class="example__block">
+          <h3 class="example__headline">60 дней</h3>
+          <p class="example__caption">затрачено времени</p>
+        </div>
+      </div>
+      <p class="example__subtitle">Затраты на питание: 15 000 руб.</p>
+      <img class="example__photo example__photo--visible" src="img/before-mobile.png" width="311" height="232"
+           alt="Полный кот">
+      <img class="example__photo" src="img/after-mobile.png" width="251" height="240" alt="Худой кот">
+      <div class="example__toggle">
+        <p class="example__toggle-label">Было</p>
+        <div class="example__toggle-range"></div>
+        <p class="example__toggle-label">Стало</p>
+      </div>
+    </div>
+  </section>
+  <section class="contacts">
+    <div class="contacts__wrapper">
+      <div class="address">
+        <h2 class="address__heading">Приглашаем к сотрудничеству дилеров!</h2>
+        <address class="address__street">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</address>
+      </div>
+      <div class="map">
+        <img class="map__image " src="img/location.png" width="320" height="362"
+             alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
+      </div>
     </div>
   </section>
 </main>
-
-
+<footer class="page-footer">
+  <div class="page-footer__wrapper">
+    <div class="page-footer__logo">
+      <img src="img/logo-text.svg" width="128" height="24" alt="Логотип «Cat Energy»">
+    </div>
+    <div class="page-footer__social">
+      <!--      TODO вставить социконки-->
+    </div>
+    <div class="page-footer__copyright">
+      <!--      TODO вставить лого и название-->
+    </div>
+  </div>
+</footer>
 </body>
 </html>
