--- a/source/index.html
+++ b/source/index.html
@@ -131,11 +131,27 @@
     <div class="page-footer__logo">
       <img src="img/logo-text.svg" width="128" height="24" alt="Логотип «Cat Energy»">
     </div>
-    <div class="page-footer__social">
-      <!--      TODO вставить социконки-->
+    <div class="page-footer__social social">
+      <b class="social__title">Давайте дружить!</b>
+      <ul class="social__list">
+        <li class="social__item">
+          <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">Мы в Вконтакте</a>
+        </li>
+        <li class="social__item">
+          <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
+        </li>
+        <li class="social__item">
+          <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy">Мы в
+            Инстаграме</a>
+        </li>
+      </ul>
     </div>
-    <div class="page-footer__copyright">
-      <!--      TODO вставить лого и название-->
+    <div class="page-footer__copyright copyright">
+      <b class="copyright__text">HTML Academy</b>
+      <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+        <!--        TODO кавычки елочки в альт -->
+        <img class="copyright__logo" src="img/logo_html.svg" width="27" height="34" alt="Логотип HTML Academy">
+      </a>
     </div>
   </div>
 </footer>
