--- a/source/index.html
+++ b/source/index.html
@@ -7,10 +7,10 @@
 <body class="page__body">
 <header class="page-header">
   <a class="page-header__logo">
-    <img src="img/logo-mobile.svg" width="34" height="38" alt="Логотип «Cat Energy»">
+    <img src="https://via.placeholder.com/34x38" width="34" height="38" alt="Логотип «Cat Energy»">
   </a>
   <a class="page-header__logo-text">
-    <img src="img/logo-text.svg" width="101" height="18" alt="Cat Energy">
+    <img src="https://via.placeholder.com/101x18" width="101" height="18" alt="Cat Energy">
   </a>
   <button class="page-header__menu-toggle" type="button">
     <span class="visually-hidden">Открыть меню</span>
@@ -44,7 +44,7 @@
       <h2 class="visually-hidden">Промо-блок</h2>
       <p class="promo__title">Функциональное питание для котов</p>
       <p class="promo__slogan">Занялся собой? Займись котом!</p>
-      <img src="img/index-can-mobile.png" alt="Стаканчик с едой для кошек">
+      <img src="https://via.placeholder.com/280x270" width="280" height="270" alt="Стаканчик с едой для кошек">
       <a class="promo__button button" href="#">Подобрать программу</a>
     </div>
   </section>
@@ -103,9 +103,9 @@
         </div>
       </div>
       <p class="example__subtitle">Затраты на питание: 15 000 руб.</p>
-      <img class="example__photo example__photo--visible" src="img/before-mobile.png" width="311" height="232"
+      <img class="example__photo example__photo--visible" src="https://via.placeholder.com/311x232" width="311" height="232"
            alt="Полный кот">
-      <img class="example__photo" src="img/after-mobile.png" width="251" height="240" alt="Худой кот">
+      <img class="example__photo" src="https://via.placeholder.com/251x240" width="251" height="240" alt="Худой кот">
       <div class="example__toggle">
         <p class="example__toggle-label">Было</p>
         <div class="example__toggle-range"></div>
@@ -120,7 +120,7 @@
         <address class="address__street">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</address>
       </div>
       <div class="map">
-        <img class="map__image " src="img/location.png" width="320" height="362"
+        <img class="map__image" src="https://via.placeholder.com/320x362" width="320" height="362"
              alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
       </div>
     </div>
@@ -129,7 +129,7 @@
 <footer class="page-footer">
   <div class="page-footer__wrapper">
     <div class="page-footer__logo">
-      <img src="img/logo-text.svg" width="128" height="24" alt="Логотип «Cat Energy»">
+      <img src="https://via.placeholder.com/128x24" width="128" height="24" alt="Логотип «Cat Energy»">
     </div>
     <div class="page-footer__social social">
       <b class="social__title">Давайте дружить!</b>
@@ -150,7 +150,7 @@
       <b class="copyright__text">HTML Academy</b>
       <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
         <!--        TODO кавычки елочки в альт -->
-        <img class="copyright__logo" src="img/logo_html.svg" width="27" height="34" alt="Логотип HTML Academy">
+        <img class="copyright__logo" src="https://via.placeholder.com/27x34" width="27" height="34" alt="Логотип HTML Academy">
       </a>
     </div>
   </div>
