--- a/source/index.html
+++ b/source/index.html
@@ -149,8 +149,7 @@
     <div class="page-footer__copyright copyright">
       <b class="copyright__text">HTML Academy</b>
       <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-        <!--        TODO кавычки елочки в альт -->
-        <img class="copyright__logo" src="https://via.placeholder.com/27x34" width="27" height="34" alt="Логотип HTML Academy">
+        <img class="copyright__logo" src="https://via.placeholder.com/27x34" width="27" height="34" alt="Логотип «HTML Academy»">
       </a>
     </div>
   </div>
