--- a/source/index.html
+++ b/source/index.html
@@ -113,6 +113,8 @@
       </div>
     </div>
   </section>
+</main>
+<footer class="page-footer">
   <section class="contacts">
     <div class="contacts__wrapper">
       <div class="address">
@@ -125,9 +127,7 @@
       </div>
     </div>
   </section>
-</main>
-<footer class="page-footer">
-  <div class="page-footer__wrapper">
+  <section class="page-footer__wrapper">
     <div class="page-footer__logo">
       <img src="https://via.placeholder.com/128x24" width="128" height="24" alt="Логотип «Cat Energy»">
     </div>
@@ -152,7 +152,7 @@
         <img class="copyright__logo" src="https://via.placeholder.com/27x34" width="27" height="34" alt="Логотип «HTML Academy»">
       </a>
     </div>
-  </div>
+  </section>
 </footer>
 </body>
 </html>
