--- a/source/form.html
+++ b/source/form.html
@@ -41,6 +41,7 @@
   <h1 class="page-main__heading">Подбор программы</h1>
   <section class="form">
     <p class="form__tagline">Заполните анкету, и мы подберем программу питания для вашего кота</p>
+    <!--TODO починить форму-->
     <form class="cat-info" action="https://echo.htmlacademy.ru" method="get">
       <fieldset class="cat-info__form">
         <legend class="visually-hidden">Данные кота</legend>
