--- a/source/form.html
+++ b/source/form.html
@@ -35,6 +35,7 @@
 <main class="page-main">
   <h1 class="main-heading">Подбор программы</h1>
   <section class="form">
+    <h2 class="visually-hidden">Анкета кота</h2>
     <p class="form__tagline">Заполните анкету, и мы подберем программу питания для вашего кота</p>
     <!--TODO починить форму-->
     <form class="cat-info" action="https://echo.htmlacademy.ru" method="get">
@@ -130,6 +131,7 @@
     </div>
   </section>
   <section class="page-footer__wrapper">
+    <h2 class="visually-hidden">Наши соцсети</h2>
     <div class="page-footer__logo">
       <img src="https://via.placeholder.com/128x24" width="128" height="24" alt="Логотип «Cat Energy»">
     </div>
