--- a/source/index.html
+++ b/source/index.html
@@ -127,6 +127,7 @@
     </div>
   </section>
   <section class="page-footer__wrapper">
+    <h2 class="visually-hidden">Наши соцсети</h2>
     <div class="page-footer__logo">
       <img src="https://via.placeholder.com/128x24" width="128" height="24" alt="Логотип «Cat Energy»">
     </div>
