Разметил страницу каталога

--- a/source/index.html
+++ b/source/index.html
@@ -39,7 +39,7 @@
       <h2 class="visually-hidden">Промо-блок</h2>
       <p class="promo__title">Функциональное питание для котов</p>
       <p class="promo__slogan">Занялся собой? Займись котом!</p>
-      <img src="https://via.placeholder.com/280x270" width="280" height="270" alt="Стаканчик с едой для кошек">
+      <img src="https://via.placeholder.com/280x270" width="280" height="270" alt="Стаканчик с едой для котов">
       <a class="promo__button button" href="#">Подобрать программу</a>
     </div>
   </section>
