правки каталога от наставника

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -38,10 +38,10 @@
     <h2 class="visually-hidden">Основной каталог</h2>
     <ul class="main-catalog__list">
       <li class="product-card">
-        <div class="product-card__image">
+        <a class="product-card__image" href="#">
           <img src="https://via.placeholder.com/68x86" width="68" height="86" alt="Стаканчик с едой для котов">
-        </div>
-        <h3 class="product-card__title">Cat Energy PRO 500 г</h3>
+        </a>
+        <a class="product-card__title" href="#">Cat Energy PRO 500 г</a>
         <table class="product-card__table">
           <tr>
             <td>Масса</td>
@@ -56,13 +56,13 @@
             <td>700 Р.</td>
           </tr>
         </table>
-        <button class="product-card__button button" type="button">Заказать</button>
+        <a class="product-card__button button" href="#">Заказать</a>
       </li>
       <li class="product-card">
-        <div class="product-card__image">
+        <a class="product-card__image" href="#">
           <img src="https://via.placeholder.com/68x86" width="68" height="86" alt="Стаканчик с едой для котов">
-        </div>
-        <h3 class="product-card__title">Cat Energy PRO 1000 г</h3>
+        </a>
+        <a class="product-card__title" href="#">Cat Energy PRO 1000 г</a>
         <table class="product-card__table">
           <tr>
             <td>Масса</td>
@@ -77,13 +77,13 @@
             <td>1000 Р.</td>
           </tr>
         </table>
-        <button class="product-card__button button" type="button">Заказать</button>
+        <a class="product-card__button button" href="#">Заказать</a>
       </li>
       <li class="product-card">
-        <div class="product-card__image">
+        <a class="product-card__image" href="#">
           <img src="https://via.placeholder.com/68x86" width="68" height="86" alt="Стаканчик с едой для котов">
-        </div>
-        <h3 class="product-card__title">Cat Energy PRO 500 г</h3>
+        </a>
+        <a class="product-card__title" href="#">Cat Energy PRO 500 г</a>
         <table class="product-card__table">
           <tr>
             <td>Масса</td>
@@ -98,13 +98,13 @@
             <td>700 Р.</td>
           </tr>
         </table>
-        <button class="product-card__button button" type="button">Заказать</button>
+        <a class="product-card__button button" href="#">Заказать</a>
       </li>
       <li class="product-card">
-        <div class="product-card__image">
+        <a class="product-card__image" href="#">
           <img src="https://via.placeholder.com/68x86" width="68" height="86" alt="Стаканчик с едой для котов">
-        </div>
-        <h3 class="product-card__title">Cat Energy PRO 1000 г</h3>
+        </a>
+        <a class="product-card__title" href="#">Cat Energy PRO 1000 г</a>
         <table class="product-card__table">
           <tr>
             <td>Масса</td>
@@ -119,13 +119,13 @@
             <td>1000 Р.</td>
           </tr>
         </table>
-        <button class="product-card__button button" type="button">Заказать</button>
+        <a class="product-card__button button" href="#">Заказать</a>
       </li>
       <li class="product-card">
-        <div class="product-card__image">
+        <a class="product-card__image" href="#">
           <img src="https://via.placeholder.com/68x86" width="68" height="86" alt="Стаканчик с едой для котов">
-        </div>
-        <h3 class="product-card__title">Cat Energy Slim 500 г</h3>
+        </a>
+        <a class="product-card__title" href="#">Cat Energy Slim 500 г</a>
         <table class="product-card__table">
           <tr>
             <td>Масса</td>
@@ -140,13 +140,13 @@
             <td>400 Р.</td>
           </tr>
         </table>
-        <button class="product-card__button button" type="button">Заказать</button>
+        <a class="product-card__button button" href="#">Заказать</a>
       </li>
       <li class="product-card">
-        <div class="product-card__image">
+        <a class="product-card__image" href="#">
           <img src="https://via.placeholder.com/68x86" width="68" height="86" alt="Стаканчик с едой для котов">
-        </div>
-        <h3 class="product-card__title">Cat Energy Slim 1000 г</h3>
+        </a>
+        <a class="product-card__title" href="#">Cat Energy Slim 1000 г</a>
         <table class="product-card__table">
           <tr>
             <td>Масса</td>
@@ -161,13 +161,13 @@
             <td>700 Р.</td>
           </tr>
         </table>
-        <button class="product-card__button button" type="button">Заказать</button>
+        <a class="product-card__button button" href="#">Заказать</a>
       </li>
       <li class="product-card">
-        <div class="product-card__image">
+        <a class="product-card__image" href="#">
           <img src="https://via.placeholder.com/68x86" width="68" height="86" alt="Стаканчик с едой для котов">
-        </div>
-        <h3 class="product-card__title">Cat Energy Slim 500 г</h3>
+        </a>
+        <a class="product-card__title" href="#">Cat Energy Slim 500 г</a>
         <table class="product-card__table">
           <tr>
             <td>Масса</td>
@@ -182,7 +182,7 @@
             <td>500 Р.</td>
           </tr>
         </table>
-        <button class="product-card__button button" type="button">Заказать</button>
+        <a class="product-card__button button" href="#">Заказать</a>
       </li>
       <li class="product-card product-card--show-more">
         <h3 class="product-card__title">Показать еще 100500 товаров</h3>
@@ -193,7 +193,7 @@
   </section>
   <section class="extra-catalog">
     <h2 class="extra-catalog__title">Дополнительные товары</h2>
-    <ul class="extra-catalog_list">
+    <ul class="extra-catalog__list">
       <li class="extra-card">
         <h3 class="extra-card__title">Сахарозаменитель</h3>
         <table class="extra-card__table">
