--- a/source/catalog.html
+++ b/source/catalog.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Кэт энерджи</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="page__body">
 <header class="page-header">
@@ -33,7 +34,7 @@
   </nav>
 </header>
 <main class="page-main">
-  <h1 class="main-heading">Каталог продукции</h1>
+  <h1 class="section-title">Каталог продукции</h1>
   <section class="main-catalog">
     <h2 class="visually-hidden">Основной каталог</h2>
     <ul class="main-catalog__list">
@@ -253,7 +254,7 @@
       </div>
       <div class="map">
         <img class="map__image" src="https://via.placeholder.com/320x362" width="320" height="362"
-             alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
+              alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
       </div>
     </div>
   </section>
@@ -281,7 +282,7 @@
       <b class="copyright__text">HTML Academy</b>
       <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
         <img class="copyright__logo" src="https://via.placeholder.com/27x34" width="27" height="34"
-             alt="Логотип «HTML Academy»">
+              alt="Логотип «HTML Academy»">
       </a>
     </div>
   </section>
