--- a/source/index.html
+++ b/source/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Кэт энерджи</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="page__body">
 <header class="page-header">
@@ -35,11 +36,11 @@
 <main class="page-main">
   <h1 class="visually-hidden">Функциональное питание для котов «Cat energy»</h1>
   <section class="promo">
-    <div class="promo-wrapper">
+    <div class="promo__wrapper">
       <h2 class="visually-hidden">Промо-блок</h2>
       <p class="promo__title">Функциональное питание для котов</p>
       <p class="promo__slogan">Занялся собой? Займись котом!</p>
-      <img src="https://via.placeholder.com/280x270" width="280" height="270" alt="Стаканчик с едой для котов">
+      <img src="img/promo-can-mobile.png" width="280" height="270" alt="Стаканчик с едой для котов">
       <a class="promo__button button" href="#">Подобрать программу</a>
     </div>
   </section>
@@ -64,7 +65,7 @@
   </section>
   <section class="special">
     <div class="special__wrapper">
-      <h2 class="special__title">Как это работает</h2>
+      <h2 class="section-title">Как это работает</h2>
       <ul class="special__list">
         <li class="special__item special__item--nutrients">
           <p class="special__text">Функциональное питание содержит только полезные питательные вещества.</p>
@@ -83,7 +84,7 @@
   </section>
   <section class="example">
     <div class="example__wrapper">
-      <h2 class="example__title">Живой пример</h2>
+      <h2 class="section-title">Живой пример</h2>
       <p class="example__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм
         на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих
         привычек и по-прежнему спит по 16 часов в день.</p>
@@ -99,11 +100,11 @@
       </div>
       <p class="example__subtitle">Затраты на питание: 15 000 руб.</p>
       <div class="example__photo example__photo--visible">
-        <img class="example__img" src="https://via.placeholder.com/311x232" width="311"
-             height="232" alt="Полный кот">
+        <img class="example__img" src="img/before-mobile.png" width="311"
+              height="232" alt="Полный кот">
       </div>
       <div class="example__photo">
-        <img class="example__img" src="https://via.placeholder.com/251x240" width="251" height="240" alt="Худой кот">
+        <img class="example__img" src="img/after-mobile.png" width="251" height="240" alt="Худой кот">
       </div>
       <div class="example__toggle">
         <button class="example__toggle-label" type="button">Было</button>
@@ -121,36 +122,35 @@
         <address class="address__street">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</address>
       </div>
       <div class="map">
-        <img class="map__image" src="https://via.placeholder.com/320x362" width="320" height="362"
-             alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
+        <img class="map__image" src="img/location.png" width="320" height="362"
+              alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
       </div>
     </div>
   </section>
   <section class="page-footer__wrapper">
     <h2 class="visually-hidden">Наши соцсети</h2>
     <div class="page-footer__logo">
-      <img src="https://via.placeholder.com/128x24" width="128" height="24" alt="Логотип «Cat Energy»">
+      <img src="img/footer-logo.svg" width="128" height="24" alt="Логотип «Cat Energy»">
     </div>
     <div class="page-footer__social social">
-      <b class="social__title">Давайте дружить!</b>
+      <b class="visually-hidden">Давайте дружить!</b>
       <ul class="social__list">
         <li class="social__item">
-          <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">Мы в Вконтакте</a>
+          <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy"></a>
         </li>
         <li class="social__item">
-          <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
+          <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy"></a>
         </li>
         <li class="social__item">
-          <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy">Мы в
-            Инстаграме</a>
+          <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy"></a>
         </li>
       </ul>
     </div>
     <div class="page-footer__copyright copyright">
-      <b class="copyright__text">HTML Academy</b>
+      <a class="copyright__text" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
       <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-        <img class="copyright__logo" src="https://via.placeholder.com/27x34" width="27" height="34"
-             alt="Логотип «HTML Academy»">
+        <img class="copyright__logo" src="img/html-logo.svg" width="27" height="34"
+              alt="Логотип «HTML Academy»">
       </a>
     </div>
   </section>
