--- a/source/catalog.html
+++ b/source/catalog.html
@@ -16,17 +16,17 @@
   <nav class="main-nav">
     <ul class="main-nav__list">
       <li class="main-nav__item main-nav__item--active">
-        <a>
+        <a href="index.html">
           Главная
         </a>
       </li>
       <li class="main-nav__item">
-        <a href="#">
+        <a>
           Каталог продукции
         </a>
       </li>
       <li class="main-nav__item">
-        <a href="#">
+        <a href="form.html">
           Подбор программы
         </a>
       </li>
@@ -253,7 +253,7 @@
         <address class="address__street">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</address>
       </div>
       <div class="map">
-        <img class="map__image" src="https://via.placeholder.com/320x362" width="320" height="362"
+        <img class="map__image" src="img/location.png" width="320" height="362"
               alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
       </div>
     </div>
@@ -261,27 +261,26 @@
   <section class="page-footer__wrapper">
     <h2 class="visually-hidden">Наши соцсети</h2>
     <div class="page-footer__logo">
-      <img src="https://via.placeholder.com/128x24" width="128" height="24" alt="Логотип «Cat Energy»">
+      <img src="img/footer-logo.svg" width="128" height="24" alt="Логотип «Cat Energy»">
     </div>
     <div class="page-footer__social social">
-      <b class="social__title">Давайте дружить!</b>
+      <b class="visually-hidden">Давайте дружить!</b>
       <ul class="social__list">
         <li class="social__item">
-          <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">Мы в Вконтакте</a>
+          <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy"></a>
         </li>
         <li class="social__item">
-          <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
+          <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy"></a>
         </li>
         <li class="social__item">
-          <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy">Мы в
-            Инстаграме</a>
+          <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy"></a>
         </li>
       </ul>
     </div>
     <div class="page-footer__copyright copyright">
-      <b class="copyright__text">HTML Academy</b>
+      <a class="copyright__text" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
       <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-        <img class="copyright__logo" src="https://via.placeholder.com/27x34" width="27" height="34"
+        <img class="copyright__logo" src="img/html-logo.svg" width="27" height="34"
               alt="Логотип «HTML Academy»">
       </a>
     </div>
