--- a/source/index.html
+++ b/source/index.html
@@ -21,12 +21,12 @@
         </a>
       </li>
       <li class="main-nav__item">
-        <a href="#">
+        <a href="catalog.html">
           Каталог продукции
         </a>
       </li>
       <li class="main-nav__item">
-        <a href="#">
+        <a href="form.html">
           Подбор программы
         </a>
       </li>
