оформил страницу каталога

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -40,7 +40,7 @@
     <ul class="main-catalog__list">
       <li class="product-card">
         <a class="product-card__image" href="#">
-          <img src="https://via.placeholder.com/68x86" width="68" height="86" alt="Стаканчик с едой для котов">
+          <img src="img/chicken-500g.png" width="68" height="86" alt="Стаканчик с едой для котов">
         </a>
         <a class="product-card__title" href="#">Cat Energy PRO 500 г</a>
         <table class="product-card__table">
@@ -61,7 +61,7 @@
       </li>
       <li class="product-card">
         <a class="product-card__image" href="#">
-          <img src="https://via.placeholder.com/68x86" width="68" height="86" alt="Стаканчик с едой для котов">
+          <img src="img/chicken-1000g.png" width="68" height="86" alt="Стаканчик с едой для котов">
         </a>
         <a class="product-card__title" href="#">Cat Energy PRO 1000 г</a>
         <table class="product-card__table">
@@ -82,7 +82,7 @@
       </li>
       <li class="product-card">
         <a class="product-card__image" href="#">
-          <img src="https://via.placeholder.com/68x86" width="68" height="86" alt="Стаканчик с едой для котов">
+          <img src="img/fish-500g.png" width="68" height="86" alt="Стаканчик с едой для котов">
         </a>
         <a class="product-card__title" href="#">Cat Energy PRO 500 г</a>
         <table class="product-card__table">
@@ -103,7 +103,7 @@
       </li>
       <li class="product-card">
         <a class="product-card__image" href="#">
-          <img src="https://via.placeholder.com/68x86" width="68" height="86" alt="Стаканчик с едой для котов">
+          <img src="img/fish-1000g.png" width="68" height="86" alt="Стаканчик с едой для котов">
         </a>
         <a class="product-card__title" href="#">Cat Energy PRO 1000 г</a>
         <table class="product-card__table">
@@ -124,7 +124,7 @@
       </li>
       <li class="product-card">
         <a class="product-card__image" href="#">
-          <img src="https://via.placeholder.com/68x86" width="68" height="86" alt="Стаканчик с едой для котов">
+          <img src="img/grechka-500g.png" width="68" height="86" alt="Стаканчик с едой для котов">
         </a>
         <a class="product-card__title" href="#">Cat Energy Slim 500 г</a>
         <table class="product-card__table">
@@ -145,7 +145,7 @@
       </li>
       <li class="product-card">
         <a class="product-card__image" href="#">
-          <img src="https://via.placeholder.com/68x86" width="68" height="86" alt="Стаканчик с едой для котов">
+          <img src="img/grechka-1000g.png" width="68" height="86" alt="Стаканчик с едой для котов">
         </a>
         <a class="product-card__title" href="#">Cat Energy Slim 1000 г</a>
         <table class="product-card__table">
@@ -166,7 +166,7 @@
       </li>
       <li class="product-card">
         <a class="product-card__image" href="#">
-          <img src="https://via.placeholder.com/68x86" width="68" height="86" alt="Стаканчик с едой для котов">
+          <img src="img/rice-500g.png" width="68" height="86" alt="Стаканчик с едой для котов">
         </a>
         <a class="product-card__title" href="#">Cat Energy Slim 500 г</a>
         <table class="product-card__table">
@@ -188,7 +188,7 @@
       <li class="product-card product-card--show-more">
         <h3 class="product-card__title">Показать еще 100500 товаров</h3>
         <p class="product-card__text">На самом деле вкусов гораздо больше!</p>
-        <button class="product-card__button button" type="button">Показать все</button>
+        <button class="product-card__button product-card__show-more-button button" type="button">Показать все</button>
       </li>
     </ul>
   </section>
@@ -240,7 +240,7 @@
   <section class="gift">
     <h2 class="visually-hidden">Подарок</h2>
     <div class="gift__icon">
-      <img src="https://via.placeholder.com/78x80" width="78" height="80" alt="Изображение подарка">
+      <img src="img/icon_gift.svg" width="78" height="80" alt="Изображение подарка">
     </div>
     <p class="gift__text">Закажите все и получите чехол для кота в подарок!</p>
   </section>
